--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,12 +52,19 @@ dependencies:
   flutter_svg: ^2.0.1
   flutter_hooks: ^0.18.6
   flutter_riverpod: ^2.2.0
+  dartz: ^0.10.1
+  dio: ^4.0.6
+  go_router:
   flutter_form_builder: ^7.7.0
   hive: ^2.2.3
   freezed_annotation: ^2.2.0
-  dio: ^5.0.0
-
-
+  flutter_dotenv: ^5.0.2
+  get: ^4.6.5
+  shared_preferences: ^2.0.18
+  form_builder_validators: ^8.5.0
+  pinput: ^2.2.31
+  firebase_core: ^2.9.0
+  firebase_auth: ^4.4.0
 
 
 
@@ -99,6 +106,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
       - assets/icons/
+      - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
