--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,6 +12,13 @@
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
             android:hardwareAccelerated="true"
             android:windowSoftInputMode="adjustResize">
+            <meta-data android:name="flutter_deeplinking_enabled" android:value="true" />
+<intent-filter android:autoVerify="true">
+    <action android:name="android.intent.action.VIEW" />
+    <category android:name="android.intent.category.DEFAULT" />
+    <category android:name="android.intent.category.BROWSABLE" />
+    <data android:scheme="kpg" android:host="{your package name}" />
+</intent-filter>
             <!-- Specifies an Android theme to apply to this Activity as soon as
                  the Android process has started. This theme is visible to the user
                  while the Flutter UI initializes. After that, this theme continues
@@ -31,8 +38,12 @@
     <category android:name="android.intent.category.BROWSABLE" />
     <data android:scheme="kpg" android:host="com.example.matchs_maker" />
 </intent-filter>
+
         </activity>
         <receiver
+        tools:replace="android:exported"
+xmlns:tools="http://schemas.android.com/tools"
+
     android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationBootReceiver"
     android:exported="true">
     <intent-filter>
