--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,18 +4,6 @@ description: A new Flutter project.
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-# In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
 version: 1.0.0+1
 
 environment:
@@ -43,30 +31,30 @@ dependencies:
   injectable: ^2.1.0
   fluttertoast: ^8.1.3
   url_launcher: ^6.1.9
-  flushbar: ^1.10.4
-  another_flushbar: ^1.12.29
+  another_flushbar: ^1.12.30
   flare_flutter: ^3.0.2
   lottie: ^2.2.0
   auto_route: ^5.0.4
-  cached_network_image: ^3.2.3
   flutter_svg: ^2.0.1
   flutter_hooks: ^0.18.6
   flutter_riverpod: ^2.2.0
   dartz: ^0.10.1
   dio: ^4.0.6
   go_router:
-  flutter_form_builder: ^7.7.0
+  flutter_form_builder: ^9.0.0
   hive: ^2.2.3
   freezed_annotation: ^2.2.0
   flutter_dotenv: ^5.0.2
   get: ^4.6.5
-  form_builder_validators: ^8.5.0
+  form_builder_validators: ^9.0.0
+
   firebase_core: ^2.9.0
   firebase_auth: ^4.4.0
   google_fonts: ^4.0.3
-  firebase_messaging: ^14.4.0
-  flutter_local_notifications: ^8.2.0
+  firebase_messaging: ^14.6.1
+  flutter_local_notifications: ^14.1.0
   country_picker: ^2.0.20
+  cached_network_image: ^3.2.3
 
   cloud_firestore: ^4.1.0
   firebase_storage: ^11.0.6
@@ -77,21 +65,7 @@ dependencies:
   khalti_flutter: ^2.2.1
   smooth_page_indicator: ^1.1.0
   firebase_in_app_messaging: ^0.7.3
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+  app_settings: ^4.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
